--- a/src/group_28_ca_ej.Rmd
+++ b/src/group_28_ca_ej.Rmd
@@ -36,4 +36,4 @@ ggplot(data = ces_clean, aes(x = white, y = ces_3_0_score)) +
   theme_bw()
 ```
 
-
+The figure above shows a negative correlation between between EnviroScreen 3.0 scores for given communities and the percentage of white people within those communities. In other words, as the percentage of white people in a community increases, there tends to be lower EnviroScreen 3.0 scores (less pollution) in the community.
